--- a/policy.html
+++ b/policy.html
@@ -45,96 +45,102 @@
 
     <p>Effective date: 21st August 2024</p>
 
-Rory in Oxford ("we", "us", "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, https://roryinoxford.com (the "Site"). Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the Site.
+Privacy Policy<br><br>
 
-We may collect personal information that you voluntarily provide to us when you register on the Site, make a purchase, subscribe to our newsletter, or otherwise interact with us. The personal information we collect may include:
+Last Updated: 21st August 2024<br><br>
 
-    Name
-    Email address
-    Phone number
-    Any other information provided to us in a submittable form
+Rory in Oxford ("we", "us", "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, https://roryinoxford.com (the "Site"). Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the Site.<br><br>
 
-2. How We Use Your Information
+1. Information We Collect<br><br>
 
-We use the information we collect from you in the following ways:
+We may collect personal information that you voluntarily provide to us when you register on the Site, make a purchase, subscribe to our newsletter, or otherwise interact with us. The personal information we collect may include:<br><br>
 
-    To process and fulfill your orders.
-    To send you administrative information such as order confirmations, invoices, or updates on your order status.
-    To improve our website, products, and services.
-    To facilitate targeted advertising through Google Ads.
-    To process payments via PayPal.
+Name<br>
+Email address<br>
+Phone number<br>
+Any other information provided to us in a submittable form<br><br>
 
-3. Disclosure of Your Information
+2. How We Use Your Information<br><br>
 
-We may share your information in the following situations:
+We use the information we collect from you in the following ways:<br><br>
 
-    With Service Providers: We may share your information with third-party service providers who perform services on our behalf, such as payment processing (e.g., PayPal) or marketing services (e.g., Google Ads).
-	With contractors: Your information may need to be shared with a contracting tour guide, if Rory Kunz (the owner) is not able to provide your tour. This information would only be used in order to fulfil your order.
-    By Law or to Protect Rights: We may disclose your information if we believe it is necessary to comply with applicable law, regulation, or legal process, or to protect the rights, property, and safety of Rory in Oxford, our users, or others.
+To process and fulfill your orders.<br>
+To send you administrative information such as order confirmations, invoices, or updates on your order status.<br>
+To improve our website, products, and services.<br>
+To facilitate targeted advertising through Google Ads.<br>
+To process payments via PayPal.<br><br>
 
-4. Cookies and Tracking Technologies
+3. Disclosure of Your Information<br><br>
 
-We may use cookies, web beacons, tracking pixels, and other tracking technologies on the Site to help customize the Site and improve your experience.
+We may share your information in the following situations:<br><br>
 
-5. Third-Party Websites
+With Service Providers: We may share your information with third-party service providers who perform services on our behalf, such as payment processing (e.g., PayPal) or marketing services (e.g., Google Ads).<br>
+With contractors: Your information may need to be shared with a contracting tour guide, if Rory Kunz (the owner) is not able to provide your tour. This information would only be used in order to fulfil your order.<br>
+By Law or to Protect Rights: We may disclose your information if we believe it is necessary to comply with applicable law, regulation, or legal process, or to protect the rights, property, and safety of Rory in Oxford, our users, or others.<br><br>
 
-The Site may contain links to third-party websites that are not affiliated with us. We are not responsible for the content or privacy practices of any linked third-party websites.
+4. Cookies and Tracking Technologies<br><br>
 
-6. Security of Your Information
+We may use cookies, web beacons, tracking pixels, and other tracking technologies on the Site to help customize the Site and improve your experience.<br><br>
 
-We use administrative, technical, and physical security measures to help protect your personal information. While we have taken reasonable steps to secure the personal information you provide to us, please be aware that despite our efforts, no security measures are perfect or impenetrable, and no method of data transmission can be guaranteed against any interception or other type of misuse.
+5. Third-Party Websites<br><br>
 
-7. Your Rights
+The Site may contain links to third-party websites that are not affiliated with us. We are not responsible for the content or privacy practices of any linked third-party websites.<br><br>
 
-You have the right to:
+6. Security of Your Information<br><br>
 
-    Access and receive a copy of the information we hold about you.
-    Correct any inaccurate or incomplete information.
-    Request the deletion of your information under certain circumstances.
+We use administrative, technical, and physical security measures to help protect your personal information. While we have taken reasonable steps to secure the personal information you provide to us, please be aware that despite our efforts, no security measures are perfect or impenetrable, and no method of data transmission can be guaranteed against any interception or other type of misuse.<br><br>
 
-To exercise these rights, please contact us at roryinoxford@gmail.com.
+7. Your Rights<br><br>
 
-8. Changes to This Privacy Policy
+You have the right to:<br><br>
 
-We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.
+Access and receive a copy of the information we hold about you.<br>
+Correct any inaccurate or incomplete information.<br>
+Request the deletion of your information under certain circumstances.<br><br>
 
-Legal Basis for Processing
-We process your personal data based on the following legal grounds:
+To exercise these rights, please contact us at roryinoxford@gmail.com.<br><br>
 
-    Consent: When you provide your consent for us to process your data for specific purposes, such as receiving marketing communications.
-    Contract: Processing is necessary for the performance of a contract to which you are a party, such as processing your orders.
-    Legitimate Interests: We may process your data based on our legitimate interests, such as improving our services and conducting targeted advertising, provided these interests are not overridden by your rights.
+8. Changes to This Privacy Policy<br><br>
 
-Your Data Protection Rights
-Under the UK GDPR, you have the following rights:
+We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.<br><br>
 
-    Right to Access: You can request access to the personal data we hold about you.
-    Right to Rectification: You can request that we correct any inaccurate or incomplete information.
-    Right to Erasure: You can request that we delete your personal data, subject to certain conditions.
-    Right to Restrict Processing: You can request that we restrict the processing of your personal data under certain circumstances.
-    Right to Data Portability: You can request to receive your personal data in a structured, commonly used, and machine-readable format and to have it transferred to another data controller.
-    Right to Object: You can object to the processing of your personal data where we rely on legitimate interests as the legal basis.
+Legal Basis for Processing<br><br>
+We process your personal data based on the following legal grounds:<br><br>
 
-Cookies and Tracking Technologies
-We use cookies and similar technologies to enhance your browsing experience, serve personalized content, and analyze our traffic. By using our Site, you consent to the use of cookies in accordance with our Cookie Policy. You can manage your cookie preferences through your browser settings or by using the cookie management tool on our Site.
+Consent: When you provide your consent for us to process your data for specific purposes, such as receiving marketing communications.<br>
+Contract: Processing is necessary for the performance of a contract to which you are a party, such as processing your orders.<br>
+Legitimate Interests: We may process your data based on our legitimate interests, such as improving our services and conducting targeted advertising, provided these interests are not overridden by your rights.<br><br>
 
-International Data Transfers
-If we transfer your personal data outside the UK or the EEA, we will ensure that appropriate safeguards are in place, such as the use of Standard Contractual Clauses (SCCs) approved by the UK Information Commissioner’s Office (ICO).
+Your Data Protection Rights<br><br>
+Under the UK GDPR, you have the following rights:<br><br>
 
-Changes to This Privacy Policy
-We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. You will be notified of any significant changes through a notice on our website or by email.
+Right to Access: You can request access to the personal data we hold about you.<br>
+Right to Rectification: You can request that we correct any inaccurate or incomplete information.<br>
+Right to Erasure: You can request that we delete your personal data, subject to certain conditions.<br>
+Right to Restrict Processing: You can request that we restrict the processing of your personal data under certain circumstances.<br>
+Right to Data Portability: You can request to receive your personal data in a structured, commonly used, and machine-readable format and to have it transferred to another data controller.<br>
+Right to Object: You can object to the processing of your personal data where we rely on legitimate interests as the legal basis.<br><br>
 
-9. Contact Us
+Cookies and Tracking Technologies<br><br>
+We use cookies and similar technologies to enhance your browsing experience, serve personalized content, and analyze our traffic. By using our Site, you consent to the use of cookies in accordance with our Cookie Policy. You can manage your cookie preferences through your browser settings or by using the cookie management tool on our Site.<br><br>
 
-If you have any questions about this Privacy Policy, please contact us at:
+International Data Transfers<br><br>
+If we transfer your personal data outside the UK or the EEA, we will ensure that appropriate safeguards are in place, such as the use of Standard Contractual Clauses (SCCs) approved by the UK Information Commissioner’s Office (ICO).<br><br>
 
-Rory in Oxford
-Web: https://roryinoxford.com
-Email: roryinoxford@gmail.com
+Changes to This Privacy Policy<br><br>
+We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. You will be notified of any significant changes through a notice on our website or by email.<br><br>
 
-15 Beaumont Street
-Oxford, OX1 2NA
-United Kingdom
+9. Contact Us<br><br>
+
+If you have any questions about this Privacy Policy, please contact us at:<br><br>
+
+Rory in Oxford<br>
+Web: https://roryinoxford.com<br>
+Email: roryinoxford@gmail.com<br><br>
+
+15 Beaumont Street<br>
+Oxford, OX1 2NA<br>
+United Kingdom<br>
 
 </div>
 </body>
